@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2007 by Anton E. Lebedevich                              *
+ *   Copyright (C) 2007-2008 by Anton E. Lebedevich                         *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -46,17 +46,14 @@
 			$action = Primitive::choice('action')->setList($this->methodMap);
 
 			if ($this->defaultAction)
-				$action->setDefault($this->defaultAction);
+				$action->setValue($this->defaultAction);
 
 			Form::create()->
 				add($action)->
 				import($request->getGet())->
 				importMore($request->getPost());
 			
-			if (!$command = $action->getValue())
-				return $action->getDefault();
-			
-			return $command;
+			return $action->getValue();
 		}
 		
 		/**
