@@ -22,8 +22,8 @@
 				array('property' => $raw)
 			);
 			
-			// value, safe, raw, form, export
-			$this->formAsserts($form, 'property', $raw, $raw, $raw, $raw, $raw);
+			// value, raw, form, export
+			$this->formAsserts($form, 'property', $raw, $raw, $raw, $raw);
 			$this->formErrorAsserts($form, false, false);
 		}
 		
@@ -39,8 +39,8 @@
 			
 			// NOTE: '0' is valid string, not a missing value
 			
-			// value, safe, raw, form, export
-			$this->formAsserts($form, 'property', $raw, $raw, $raw, $raw, $raw);
+			// value, raw, form, export
+			$this->formAsserts($form, 'property', $raw, $raw, $raw, $raw);
 			$this->formErrorAsserts($form, false, false);
 		}
 		
@@ -61,38 +61,36 @@
 		{
 			$this->formErrorAsserts($form, false, false);
 			
-			// value, safe, raw, form, export
-			$this->formAsserts($form, 'property', null, null, null, null, null);
+			// value, raw, form, export
+			$this->formAsserts($form, 'property', null, null, null, null);
 		}
 		
 		protected function formAssertsMissing(Form $form, $prm, $default = null)
 		{
 			$this->formErrorAsserts($form, true, true);
 			
-			// value, safe, raw, form, export
-			$this->formAsserts($form, 'property', null, $default, null, null, null);
+			// value, raw, form, export
+			$this->formAsserts($form, 'property', null, null, null, null);
 		}
 		
 		protected function formAssertsWrong(Form $form, $prm, $raw, $default = null)
 		{
 			$this->formErrorAsserts($form, true, true);
 			
-			// value, safe, raw, form, export
-			$this->formAsserts($form, 'property', null, $default, $raw, $raw, null);
+			// value, raw, form, export
+			$this->formAsserts($form, 'property', null, $raw, $raw, null);
 		}
 		
 		private function formAsserts(
 			Form $form,
 			$prm,
 			$getValue,
-			$getSafeValue,
 			$getRawValue,
 			$getFormValue,
 			$exportValue
 		)
 		{
 			$this->assertEquals($getValue, $form->getValue($prm));
-			$this->assertEquals($getSafeValue, $form->getSafeValue($prm));
 			$this->assertEquals($getRawValue, $form->getRawValue($prm));
 			$this->assertEquals($getFormValue, $form->getFormValue($prm));
 			$this->assertEquals($exportValue, $form->exportValue($prm));
