@@ -11,6 +11,11 @@
 	* main/DAOs/ProtoDAO.class.php: fixed wrong cid-field table when lazy
 	fetching collection.
 
+2008-11-17	Konstantin V. Arkhipov
+
+	* core/Form/, ext/core/Form/: removed methods: getActualValue(),
+	getSafeValue(), getDefault(), setDefault(), getActualChoiceValue().
+
 2008-11-05	Konstantin V. Arkhipov
 
 	* core/Form/Form.class.php: getPrimitiveError() renamed to getError(),
